<resources>
    <string name="app_name">Get Pills</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">الاعدادات</string>

    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">هذا الاميل خاطئ</string>
    <string name="error_invalid_password">كلمة المرور ضعيفة جدا</string>
    <string name="password_not_match">كلمة المرور غير متطابقة</string>
    <string name="phone_to_short">هذا الرقم غير صحيح</string>
    <string name="error_invalid_date">This date is invalid</string>

    <string name="rs">$\u0020</string>
    <string name="discount_rs">Save Discount $\u0020</string>

    <string name="search_text">بحث عن الادوية&#8230;</string>
    <string name="upload_your_prescription">رفع الروشتة الخاصة بي الى الصيدلي !</string>
    <string name="looking_for">عن ماذا تبحث ؟</string>
    <string name="suggested">اقتراحات</string>
    <string name="user_manage">ادارة الحساب</string>
    <string name="user_profile">حسابي</string>
    <string name="my_orders">طلباتي</string>
    <string name="upload_prescription">ارسال الروشتة الخاصة بي الى الصيدلي</string>
    <string name="view_offer">مشاهدة العروض</string>
    <string name="product">منتجات</string>
    <string name="prescription">روشتات</string>
    <string name="medical_product">منتجات طبية</string>
    <string name="communicate">التواصل</string>
    <string name="rate_us">قيمنا</string>
    <string name="share">مشاركة</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="cart">Cart</string>
    <string name="add">اضافة</string>
    <string name="qty">الكمية:\u0020</string>
    <string name="search_prescription">بحث عن روشتات</string>
    <string name="first_name">الاسم الاول</string>
    <string name="last_name">الاسم الاخير</string>
    <string name="email_address">الايميل</string>
    <string name="dob">تاريخ الميلاد</string>
    <string name="mobile_number">رقم الهاتف</string>
    <string name="password">كلمة المرور</string>
    <string name="confirm_password">تاكيد كلمة المورو</string>
    <string name="register_chk_note">موافق على الشروط واستقبال العروض واكواد الخصم</string>
    <string name="register">انشاء حساب جديد</string>
    <string name="sign_in">تسجيل الدخول</string>
    <string name="forgot_note">هل نسيت كلمة المرور؟ اضغط هنا للمساعدة.</string>
    <string name="sinup_note">لاتملك حساب؟ اضغط هنا لانشاء حساب جديد.</string>
    <string name="forgot_note_2">Enter the email address that you used to sign up on</string>
    <string name="submit">تاكيد</string>
    <string name="login">تسجيل الدخول</string>
    <string name="reg_chk_note">Please Check our policy</string>
    <string name="upload_3_prescription">بامكانك اضافة 3 صور من الروشتة الخاصة بك</string>.
    <string name="please_upload_backside"></string>
    <string name="details">التفاصيل</string>
    <string name="name">الاسم:\u0020</string>
    <string name="email_address_2">البريد الالكتروني:\u0020</string>
    <string name="delivery_address">عنوان توصيل الطلب</string>
    <string name="no_address_found">لم يتم ايجاد اي عنوان!. الرجاء اضافة عنوان .</string>
    <string name="billing_address">عنوان توصيل الفواتير</string>
    <string name="is_prescription_meant">Is prescription(s) meant for?</string>
    <string name="new_order">طلب جديد</string>
    <string name="confirm">تاكيد</string>
    <string name="registration_successfull">تم انشاء الحساب بنجاح</string>
    <string name="available_products">منتجات متاحة:\u0020</string>
    <string name="record_not_found">لم يتم ايجاد</string>
    <string name="search">بحث</string>
    <string name="generic_available">Generic Available</string>
    <string name="generic_not_available">Generic Not Available</string>
    <string name="in_stock">IN STOCK:\u0020</string>
    <string name="update">تحديث</string>
    <string name="cart_empty">البطاقه خاليه</string>
    <string name="process_to_payment">عملية الدفع</string>
    <string name="enter_promo_code">أدخل رمز العرض / الإيصال الترويجي</string>
    <string name="apply">موافقة</string>
    <string name="order_total">السعر الاحمالي للطلب</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping_charges">Shipping Charges?</string>
    <string name="you_saved">قمت بتوفير:\u0020</string>
    <string name="discout">\u0020( خصم )</string>
    <string name="price_details">تفاصيل السعر</string>
    <string name="remove">حذف</string>
    <string name="add_photo">اضافة صورة!</string>
    <string name="take_photo">التقاط صورة</string>
    <string name="choose_from_library">اختيار من معرض الصور</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="profile_pic_updated">تم تحديث الصورة الشخصية بنجاح</string>
    <string name="city">المدينة</string>
    <string name="address">العنوان</string>
    <string name="male">ذكر</string>
    <string name="female">انثى</string>
    <string name="edit_profile">تعديل الحساب</string>
    <string name="change_password">تغيير كلمة المرور</string>
    <string name="old_password">كلمة المرور القديمة</string>
    <string name="new_password">كلمة المرور الجديدة</string>
    <string name="total_items">اجمالي الادوية</string>
    <string name="view_more">عرض المزيد</string>
    <string name="view_less">عرض اقل</string>
    <string name="check">فحص</string>
    <string name="add_address">اضافة عنوان</string>
    <string name="landmark">مكان مشهور</string>
    <string name="full_name">الاسم كامل</string>
    <string name="zip_code">الرمز البريدي</string>
    <string name="confirm_detail">تأكيد التفاصيل</string>
    <string name="edit">تعديل</string>
    <string name="i_agree_to">انا موافق على \u0020</string>
    <string name="terms_of_sale"><u>شروط البيع.</u></string>
    <string name="delivery_available">نعم! التسليم متاح ل\u0020</string>
    <string name="delivery_charge">رسوم التوصيل.\u0020</string>
    <string name="added_delivery_ddress">تمت إضافة عنوان التسليم بنجاح.</string>
    <string name="delivery_fullname">Delivery fullname:\u0020</string>
    <string name="delivery_mobilenumber">Delivery mobilenumber:\u0020</string>
    <string name="delivery_city">Delivery city:\u0020</string>
    <string name="delivery_address2">Delivery address:\u0020</string>
    <string name="delivery_landmark">delivery landmark:\u0020</string>
    <string name="address2">Address:\u0020</string>
    <string name="confirm_and_process">موافقة &amp; ارسال الطلب</string>
    <string name="choose_your_delivery_address">Choose your Delivery Address</string>
    <string name="add_new">+ اضافة جديد</string>
    <string name="delete">حذف</string>
    <string name="edit_address">تعديل العنوان</string>
    <string name="order_detail">تفاصيل الطلب</string>
    <string name="payment_amount">مبلغ الدفعة</string>
    <string name="select_payment_mode">اختر طريقة الدفع</string>
    <string name="cash_on_delivery">الدفع عن الاستلام</string>
    <string name="paypal">بايبال</string>
    <string name="make_payment">قم بالدفع</string>
    <string name="payment">دفع</string>
    <string name="offer">العروض</string>
    <string name="valid">صالح:\u0020</string>
    <string name="code">الكود:\u0020</string>
    <string name="to">\u0020الى\u0020</string>
    <string name="description">الوصف:\u0020</string>
    <string name="text_copied">النص الذي تم نسخه</string>
    <string name="thank_you_order">شكرا لطلبك.</string>
    <string name="countinue_home">توصيل الى المنزل</string>
    <string name="track_my_order">تابع طلبي</string>
    <string name="date">التاريخ:\u0020</string>
    <string name="time">الوقت:\u0020</string>
    <string name="items">العناصر:\u0020</string>
    <string name="order_no">رقم الطلب.:\u0020</string>
    <string name="pending">قيد الانتظار</string>
    <string name="delivered">تم التوصيل</string>
    <string name="summery">ملخص</string>
    <string name="total">المجموع:\u0020</string>
    <string name="cancel_order">الغاء الطلب</string>
    <string name="delivery_charge2">رسوم التوصيل:\u0020</string>
    <string name="payment_type">نوع الدفع:\u0020</string>
    <string name="qty2">الكمية</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="are_you_sure">هل أنت واثق بأك تريد أن تلغي طلب الشراء؟</string>
    <string name="prescription_order">طلب وصفة طبية:\u0020</string>
    <string name="status">الحالة:\u0020</string>
    <string name="net_amount">المبلغ الصافي</string>
    <string name="offer_code">رمز العرض\u0020</string>
    <string name="please_select_delivery_address">Please select delivery address</string>
    <string name="please_agree_with_terms">Please Agree with our terms</string>
    <string name="please_enter_valid_voucher_code">Please enter a valid Promotional or Voucher Code.</string>
    <string name="pres">Pres.\u0020</string>
    <string name="notification">الاشعارات</string>

</resources>
