<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context="com.getpills.My_order_detailActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_order_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/relativeLayout"
        android:layout_alignParentTop="true" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:background="@color/color_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/space_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_5"
            android:layout_marginRight="@dimen/space_5"
            android:layout_toLeftOf="@+id/textView57"
            android:layout_toStartOf="@+id/textView57"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_order_detail_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/textView55"
                    android:layout_width="229dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_order_detail_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/textView53"
                    android:layout_width="231dp"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_type" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_order_detail_charge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/textView50"
                    android:layout_width="233dp"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_charge2" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_order_detail_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/xml_rounded_button"
            android:padding="@dimen/space_8"
            android:text="@string/cancel_order"
            android:textAllCaps="true"
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/space_8">

        <LinearLayout
            android:layout_width="154dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_order_detail_currency"
                android:layout_width="49dp"
                android:layout_height="wrap_content"
                android:text="@string/rs"
                android:textColor="@color/white"
                android:textSize="@dimen/text_18" />

            <TextView
                android:id="@+id/tv_order_detail_price"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="@dimen/text_18" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@color/white"
                android:textSize="@dimen/text_18" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView39"
            android:layout_width="65dp"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:text="@string/summery"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>
