<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.getpills.My_prescription_viewActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_my_prescription_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/tools"
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/space_5"
                app:cardUseCompatPadding="true"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/space_10">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_presc_total_items"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="TextView" />

                        <TextView
                            android:id="@+id/textView3sdf0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/total_items" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/space_5"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView28"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rs" />

                            <TextView
                                android:id="@+id/tv_presc_sub_total"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="00" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView21"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/subtotal" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/space_5"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView31"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rs" />

                            <TextView
                                android:id="@+id/tv_presc_charge"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="00" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView30"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/shipping_charges" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/space_5"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textViewsdf31"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rs"
                                android:textColor="@color/black"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_presc_total"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="00"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView3sd0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/order_total"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/space_5"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView33"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/you_saved" />

                        <TextView
                            android:id="@+id/textView34"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/rs" />

                        <TextView
                            android:id="@+id/tv_presc_discount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="00" />

                        <TextView
                            android:id="@+id/textView36"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/discout" />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <include layout="@layout/include_voucher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chk_config_agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_agree_to" />

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_of_sale"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_confirm_process"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/confirm_and_process"
        android:textColor="@color/white" />

</RelativeLayout>
